--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="index.js"></script>
     <link rel="stylesheet" href="index.css" />
-    <title>Document</title>
+    <title>To-Do list</title>
   </head>
   <body class="todo-body">
-    <h1>TO-DO LISTE</h1>
+    <h1>TO-DO LIST</h1>
     <div>
       <button id="btntodo" class="tab active_tab" data-filter="todo">
-        To Do
+        To-Do
       </button>
       <button id="btndone" class="tab" data-filter="done">Done</button>
     </div>
@@ -28,8 +28,24 @@
       </div>
       <div class="info">
         <p class="important">
-          Important? - check off
+          Done? - Check off
+          <img
+            src="/img/unchecked.webp"
+            alt="unchecked circle icon"
+            class="uncheckedcircle"
+          />
+        </p>
+        <p class="important">
+          Important? - Check off
           <img src="img/star.webp" alt="star icon" class="uncheckedstar" />
+        </p>
+        <p>
+          Delete? - Check off
+          <img
+            src="/img/trashclosed.webp"
+            alt="trash can icon"
+            class="trashicon"
+          />
         </p>
       </div>
       <ul class="todo_container"></ul>
