rettet billede links

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <p class="important">
           Done? - Check off
           <img
-            src="/img/unchecked.webp"
+            src="img/unchecked.webp"
             alt="unchecked circle icon"
             class="uncheckedcircle"
           />
@@ -42,7 +42,7 @@
         <p>
           Delete? - Check off
           <img
-            src="/img/trashclosed.webp"
+            src="img/trashclosed.webp"
             alt="trash can icon"
             class="trashicon"
           />
