--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="index.js"></script>
     <link rel="stylesheet" href="index.css" />
-    <title>To-Do list</title>
+    <title>To-do App</title>
   </head>
   <body class="todo-body">
     <h1>TO-DO LIST</h1>
